[spalenque] - fix styles on mobile view

--- a/css/widget-styles.css
+++ b/css/widget-styles.css
@@ -160,7 +160,8 @@
 	top: 0;
 	left: 50%;
 	margin: 64px 0 0 -320px;
-	width: 640px;
+	max-width: 640px;
+	width: 60%;
 	height: 80%;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
